manifests/dev/httpbin/Namespace-httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kuma.io/mesh: demo
  labels:
    kuma.io/sidecar-injection: enabled
    shared-gateway-access: "true"
  name: httpbin
